syntax = "proto3";

option java_package = "grpc.newCapacityManagement";
option java_multiple_files = true;
option java_outer_classname = "NewCapacityManagementImpl";


service newCapacityManagement {
	//unary
	rpc GetIdAccess(requestId) returns (responseId){}
	//client Streaming
	rpc SendCountPeople(stream requestCount) returns (responseCount){}
	//client Streaming
	rpc SendTerminalOccupied(stream requestOccupied) returns (responseOccupied){}
}

message containsString {
	string firstString = 1;
}
// Unary Get Id Access
message requestId {
	string firstString = 1;
}
message responseId {
	int32 firstInt = 1;
}
// Client Streaming Count People
message requestCount {
	string firstString = 1;
}
message responseCount {
	int32 firstInt = 1;
}
// Client Streaming Terminal Occupied
message requestOccupied {
	string firstString = 1;
}
message responseOccupied {
	int32 firstInt = 1;
}